Tenth commit, please tell me the website is fixed

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://4eyedglobule.github.io/weight_loss_app",
+  "homepage": "https://4eyedglobule.github.io/Weight-Change-App/",
   "name": "weight_loss_app",
   "private": true,
   "version": "0.0.0",
